# oiio

./: .gitignore  CMakeLists.txt  INSTALL.md  conanfile.txt  ocio.patch  pyproject.toml  setup.py
src/build-scripts/: build_libaom.bash  build_libde265.bash  build_libheif.bash  build_opencolorio.bash  build_openexr.bash  build_pugixml.bash  build_pybind11.bash  ci-build.bash  ci-startup.bash  docker-centos.bash  docker.sh  gh-installdeps.bash  gh-win-installdeps.bash
src/cmake/: compiler.cmake  externalpackages.cmake  pythonutils.cmake
src/ffmpeg.imageio/: CMakeLists.txt
src/heif.imageio/: CMakeLists.txt
src/jpeg2000.imageio/: CMakeLists.txt
src/libOpenImageIO/: CMakeLists.txt
src/ptex.imageio/: CMakeLists.txt
src/raw.imageio/: CMakeLists.txt
